--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,12 @@
 ---
 kind: pipeline
-name: default
+name: test
 
 steps:
-- name: cargo
+- name: cargo-build-test
   image: rust:alpine
   commands:
+  - apk add musl-dev binutils
+  - rustup target add x86_64-unknown-linux-musl
   - cargo build --all
   - cargo test --all
