[] drone-ci use host docker

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,12 +1,32 @@
 ---
 kind: pipeline
-name: test
+name: build-and-test
 
 steps:
-- name: cargo-build-test
-  image: rust:alpine
+- name: build-builder
+  image: docker
+  volumes:
+  - name: docker_sock
+    path: /var/run/docker.sock
   commands:
-  - apk add musl-dev binutils
-  - rustup target add x86_64-unknown-linux-musl
-  - cargo build --all
-  - cargo test --all
+  - docker build --target builder -t greetings-builder:latest .
+
+- name: test
+  image: greetings-builder:latest
+  pull: if-not-exists
+  commands:
+  - cargo test
+
+- name: build-app
+  image: docker
+  volumes:
+  - name: docker_sock
+    path: /var/run/docker.sock
+  commands:
+  - docker build -t greetings-app:latest .
+
+
+volumes:
+- name: docker_sock
+  host:
+    path: /var/run/docker.sock
