--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ steps:
   image: greetings-builder:latest
   pull: if-not-exists
   commands:
-  - just test-release
+  - just -f Justfile.docker test-release
 
 - name: build-app
   image: docker
